Spring: Swagger Api added